# Quasar

./: .gitignore  README.md
rust_backend/: Cargo.toml
rust_backend/entity/: Cargo.toml
rust_backend/entity/src/: lib.rs  movie.rs  production.rs
rust_backend/entity/src/data/: app_state.rs  db.rs  mod.rs  movie.rs
rust_backend/migration/src/: lib.rs  m20220101_000001_create_movie_table.rs  m20220101_000001_create_production_table.rs
rust_backend/src/: main.rs
rust_backend/src/controller/: movie.rs
rust_backend/src/data/: db.rs
svelte_frontend/: package.json  postcss.config.js  rollup.config.js
svelte_frontend/public/: index.css
svelte_frontend/src/: App.svelte  api_url.ts
svelte_frontend/src/components/: MovieCard.svelte
svelte_frontend/src/data/: IMovie.ts
svelte_frontend/src/pages/: Movie.svelte
