[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4"
actix-http = "3.0.4"
dotenv = "0.15"
listenfd = "0.5.0"
serde = "1"
serde_json = "1.0.79"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-cors = "0.6.1"

entity = { path = "entity" }
migration = { path = "migration" }
